# hse-system-engineering

hw1_Condvar_project/: CMakeLists.txt  README.md  condvar.hpp
hw2_semaphore_project/: .gitignore  CMakeLists.txt  blocking_queue.hpp  semaphore.hpp  tagged_semaphore.hpp
hw2_semaphore_project/tests/: unit.cpp
hw3_future_project/: CMakeLists.txt  README.md  future.hpp  promise.hpp  shared_state.hpp
hw3_future_project/tests/: stress.cpp  unit.cpp
hw4_mutex_project/: CMakeLists.txt  README.md  mutex.hpp
hw4_mutex_project/tests/: stress.cpp  unit.cpp
hw5_mycpu_fuse_project/: .gitignore  CMakeLists.txt  Doxyfile  README.md
hw5_mycpu_fuse_project/emulator/: cpuemu  cpuemufs.py  device.py  test.py
hw5_mycpu_fuse_project/integration/: assert.sh  device-test.sh  tree-test.sh
hw5_mycpu_fuse_project/tests/: unit.cpp
hw6_big_data_sort_project/: .gitignore  CMakeLists.txt  README.md
hw6_big_data_sort_project/include/: external_sort.hpp  file_mapping.hpp  types.hpp
hw6_big_data_sort_project/src/: external_sort.cpp  file_mapping.cpp  main.cpp
hw6_big_data_sort_project/tests/: unit.cpp
hw6_big_data_sort_project/tools/: generate_data.cpp  verify_sorted.cpp
hw7_tlb_size_project/: .gitignore  CMakeLists.txt  README.md
hw7_tlb_size_project/include/: benchmark.hpp  result.hpp  timer.hpp
hw7_tlb_size_project/src/: benchmark.cpp  main.cpp  timer.cpp
hw7_tlb_size_project/tests/: unit.cpp
hw7_tlb_size_project/tools/: plot_results.py
